# data_analysis_agent

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: dep-drift.yml  gate.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  QUALITY_BAR.md  data_sampling_for_compaction.md
docs/adr/: 0001-sampling-exact-over-sketch.md  0002-deterministic-anti-entropy-standards.md  0003-ccr-lite-result-retrieval.md  0004-memory-structure-not-values.md  0005-eval-method-not-values-sample-gate.md  0006-text-relevance-not-unified.md  0007-local-files-first-defer-db-sources.md  0008-sandbox-best-effort-not-security-boundary.md  0009-reporting-pure-domain-layer.md  0010-causal-decision-domain-layer.md
docs/roadmap/: 2026-07-05-phase1-phase2-execution-plan.md  2026-07-06-analysis-report-quality-audit.md  backlog.md  frontend-ui-todo.md
docs/superpowers/plans/: 2026-06-07-project-standards-anti-entropy.md  2026-06-08-ccr-lite-result-retrieval.md  2026-07-01-phase2-l2-promotability.md  2026-07-06-report-delivery-wave1-wave2.md  2026-07-06-report-delivery-wave3.md  2026-07-07-causal-decision-stage1.md  2026-07-07-report-delivery-wave4.md  2026-07-07-report-delivery-wave5.md  2026-07-07-report-delivery-wave6.md  2026-07-07-report-delivery-wave7.md  2026-07-07-report-delivery-wave8.md  2026-07-08-causal-decision-stage1-executable.md
docs/superpowers/specs/: 2026-06-06-data-sampling-compaction-design.md  2026-06-07-project-standards-anti-entropy-design.md  2026-06-08-ccr-lite-result-retrieval-design.md  2026-07-01-phase2-l2-promotability-design.md  2026-07-06-report-delivery-optimization-design.md  2026-07-14-report-delivery-v2-wiring-design.md  2026-07-15-eval-numeric-anchors-design.md  2026-07-15-prompt-injection-sanitization-design.md  2026-07-20-safety-baseline-design.md  2026-07-20-workspace-foundation-design.md  2026-07-21-data-quality-tool-design.md  2026-07-21-join-planner-design.md  2026-07-21-skill-ledger-design.md  2026-07-21-web-workbench-run-design.md  2026-07-22-evidence-resolution-design.md  2026-07-22-metric-contract-design.md  2026-07-22-nl-query-schema-aware-design.md  (+4 more)
examples/eval_tasks/: README.md  descriptive_smoke.json  numeric_anchor_revenue_sum.json
scripts/: checks.py  drift_rules.py  eval_gate.py  quality_gate.py
src/data_analysis_agent/: __init__.py  __main__.py  agent_loop.py  artifacts.py  config.py  doctor.py  events.py  jsonl_store.py  persistence.py  recovery.py  runtime.py  session.py  state_machine.py  workspace.py
tests/: conftest.py  test_artifacts.py  test_causal_action_plan.py  test_causal_intent.py  test_causal_model.py  test_causal_qa.py  test_causal_report_adapter.py  test_causal_report_tool.py  test_causal_skill.py  test_causal_tools.py  test_ccr_wiring.py  test_chart_render.py  test_cli.py  test_compression_fixes.py  test_config_prompt.py  test_data_profile.py  test_data_quality.py  test_doctor.py  test_eval_harvester.py  test_eval_report_assertions.py  test_evaluator.py  test_event_codec.py  test_evidence_resolution.py  test_excel_join_integration.py  test_experiment_readout.py  test_html_report.py  test_html_report_v2.py  test_integration.py  test_join_planner.py  test_joint_skill.py  test_jsonl_store.py  test_kernel.py  test_make_agent_run_fn.py  test_memory.py  test_memory_writeback.py  test_metric_contract.py  test_nl_query.py  test_numeric_validation.py  test_overlay_domain.py  test_permissions.py  (+37 more)
(+154 files in other folders)
