[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "A data analysis agent based on ReAct pattern and Claude Code LLM+Harness architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
data = [
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
data-agent = "data_analysis_agent.__main__:main"
data-agent-web = "data_analysis_agent.web.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

# pandas / numpy ship no stubs in this offline-friendly setup; the sandbox
# summarizer imports them lazily and treats them as untyped on purpose.
[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
